2014-04-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct broken mingw32-libiconv dependency specification.

	* mingw32/mingw32-libiconv.xml: Generally rationalize dependencies.
	(libiconv-bin): Remove bogus 'eq' dependency on gettext-0.18.3.1-dll-8;
	replace with correctly specified 'ge' dependency on libintl-dll-8, with
	release 0.18.1.1-1 as the realistic minimum sufficient requirement.
	* mingw32/issue.log common/issue.log: Updated accordingly.

2014-04-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct omission from gettext-0.18.3.2 package specification.

	* mingw32/mingw32-gettext.xml (gettext-bin): Add missing reference.
	* mingw32/issue.log common/issue.log: Updated accordingly.

2014-04-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Upgrade mingw32-gettext to GNU gettext-0.18.3.2

	* mingw32/mingw32-gettext.xml: Add new release specifications.
	* mingw32/issue.log common/issue.log: Updated accordingly.
	* msys/issue.log: Sync for package list consistency.

2014-01-11  Erwin Waterlander  <waterlan@xs4all.nl>

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.4.
	* mingw32/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2014-01-10  Erwin Waterlander  <waterlan@xs4all.nl>

	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.4.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Update accordingly.

2013-11-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct MPC requirements references to nonexistent MPFR package.

	* mingw32/mingw32-mpc.xml (mingw32-mpc-dev): Do not require...
	(mpfr-3.1.2-1-mingw32-dev): ...this, as an explicit 'eq' reference;
	use a 'ge' specification instead.

	* mingw32/mingw32-mpc.xml.lzma: Regenerate and republish.
	* mingw32/mingw32-package-list.xml.lzma: Likewise.
	* common/package-list.xml.lzma: Likewise.

	* mingw32/issue.log common/issue.log: Update accordingly.
