@@ -38,7 +38,7 @@
   b69474c41dc6c8fd0a9d61a50604e2cfdcf1dff2 2013101500 mingw32-gcc4.xml
   21031079d59268339bfd7c6dc8239df214588bca 2013091501 mingw32-gdb.xml
   14dd10ab97b27430bdb688f4e85993cd821f7a05 2012073100 mingw32-gendef.xml
-  5607b75445b432719b3c4e0781e5e3dca29c606d 2014042901 mingw32-gettext.xml
+  1f3543e9db268270f03ee13db26e558be896a45c 2014043000 mingw32-gettext.xml
   8272b6fc44a3e7766adec484742f007f28a39eaf 2013090900 mingw32-gmp.xml
   99e3ac0d2c743b0d927a4d89a3153a975d2bdf87 2012073100 mingw32-libarchive.xml
   e8392e268250e1bc37bc008e34c4c180cec4fdaa 2014042900 mingw32-libiconv.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   3b9dfae51f73761e69811f402c6374c63aeec552 2013110100 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  1413ad59660ad963082e7de10c31bbb725116aee 2014042902 mingw32-package-list.xml
+  1413ad59660ad963082e7de10c31bbb725116aee 2014043000 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
